--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,10 +1,20 @@
-[program:temp.worker]
+[program:temp.reader.worker]
 user=pi
 process_name=%(process_num)s
-command= /usr/bin/node /mnt/media/projects/temp/worker.js /mnt/media/projects/temp/conf.json
+command= /usr/bin/node /mnt/media/projects/temp/tempReaderWorker.js /mnt/media/projects/temp/conf.json
 numprocs=1
 autostart=true
 autorestart=true
+
+
+[program:temp.worker]
+user=pi
+process_name=%(process_num)s
+command= /usr/bin/node /mnt/media/projects/temp/worker.js
+numprocs=1
+autostart=true
+autorestart=true
+
 
 [program:telegram.bot]
 user=pi
